RESOLVED FIXED127028
[iOS] Crash in NavigatorBase::vendor loading apple.com
https://bugs.webkit.org/show_bug.cgi?id=127028
Summary [iOS] Crash in NavigatorBase::vendor loading apple.com
Joseph Pecoraro
Reported 2014-01-14 18:38:13 PST
iOS crash loading apple.com. -- NavigatorBase.cpp String NavigatorBase::vendor() const { return WEBCORE_NAVIGATOR_VENDOR; } -- config.h #if PLATFORM(IOS) #define WEBCORE_NAVIGATOR_PLATFORM wkGetPlatformNameForNavigator(); #define WEBCORE_NAVIGATOR_VENDOR wkGetVendorNameForNavigator(); #endif -- Looks like we're missing calls to fill in these WKSI functions.
Attachments
[PATCH] Proposed Fix (2.39 KB, patch)
2014-01-14 18:41 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2014-01-14 18:41:40 PST
Created attachment 221224 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2014-01-14 20:22:08 PST
Comment on attachment 221224 [details] [PATCH] Proposed Fix Clearing flags on attachment: 221224 Committed r162043: <http://trac.webkit.org/changeset/162043>
WebKit Commit Bot
Comment 3 2014-01-14 20:22:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.