[iOS] Crash in NavigatorBase::vendor loading apple.com https://bugs.webkit.org/show_bug.cgi?id=127028

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-01-14
Reviewed by Daniel Bates.

Source/WebCore:

Export function pointers to be filled in with WebKitSystemInterface functions.

* WebCore.exp.in:

Source/WebKit/mac:

Fill in iOS WebKitSystemInterface functions.

* WebCoreSupport/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

Canonical link: https://commits.webkit.org/145021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162043 268f45cc-cd09-0410-ab3c-d52691b4dbfc